--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,11 @@
             <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>javax</groupId>
+            <artifactId>javaee-api</artifactId>
+            <version>8.0</version>
+        </dependency>
     </dependencies>
 
     <build>
